# HAM-v4

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  HAM_CODEBASE_ANALYSIS.md  HAM_MONO_MODE_MIDI_ANALYSIS.md  HAM_MONO_MODE_SEQUENCER_ANALYSIS.md  HAM_UI_MIGRATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIDI_ROUTING_TEST_RESULTS.md  PERFORMANCE_OPTIMIZATION.md  README.md  ROADMAP.md  TEST_PROTOCOL.md  TEST_RESULTS_SUMMARY.md  TODO_ROADMAP.md  build.sh  build_debug.sh  build_midi_test.sh  comprehensive_midi_test.sh  final_plugin_test.sh  final_test.sh  fix_plugin_system.sh  run_coverage.sh  run_full_midi_test.sh  run_transport_analysis.sh  test_features.sh  test_fixed_app.sh  test_fixed_features.sh  test_ham_interaction.applescript  test_midi_division1.sh  test_midi_mono_mode.cpp  test_midi_routing.swift  test_midi_simple.sh  test_midi_timing.cpp  test_play_direct  test_play_direct.cpp  test_plugin_audio.cpp  test_plugin_integration.sh  (+8 more)
.claude/agents/: ham-refactoring-specialist.md
.github/workflows/: coverage.yml  ham-ci.yml  performance-tests.yml
Docs/: HAM_ARCHITECTURE.md  MIDI_ROUTING.md  PERFORMANCE.md  PLUGIN_SANDBOXING.md  UI_DESIGN.md
Scripts/: run_coverage.sh  upload_coverage.sh
Source/: Main.cpp  MainComponent.cpp  MainComponent.cpp.backup  MainComponent.h  SOURCE_OVERVIEW.md
Source/Application/: Configuration.h
Source/Domain/: CLAUDE.md
Source/Domain/Clock/: AsyncPatternEngine.cpp  AsyncPatternEngine.h  MasterClock.cpp  MasterClock.h  TimingConstants.h  TimingDiagnostics.h
Source/Domain/Engines/: AccumulatorEngine.cpp  AccumulatorEngine.h  GateEngine.cpp  GateEngine.h  PitchEngine.cpp  PitchEngine.h  SequencerEngine.cpp  SequencerEngine.h  VoiceManager.cpp  VoiceManager.h
Source/Domain/Models/: CLAUDE.md  Pattern.cpp  Pattern.h  Scale.cpp  Scale.h  ScaleSlotManager.cpp  ScaleSlotManager.h  Stage.cpp  Stage.h  Track.cpp  Track.h
Source/Domain/Processors/: MidiEventGenerator.cpp  MidiEventGenerator.h  PatternScheduler.cpp  PatternScheduler.h  TrackProcessor.cpp  TrackProcessor.h
Source/Domain/Services/: ChannelManager.cpp  ChannelManager.h  MidiRouter.cpp  MidiRouter.h  PresetManager.cpp  PresetManager.h  TrackManager.cpp  TrackManager.h
Source/Domain/Transport/: SyncManager.cpp  SyncManager.h  Transport.cpp  Transport.h
Source/Domain/Types/: MidiRoutingTypes.h
Source/Engine/Voice/: VoiceManager.cpp  VoiceManager.h
Source/Infrastructure/: CLAUDE.md
Source/Infrastructure/Audio/: HAMAudioProcessor.cpp  HAMAudioProcessor.h  HAMAudioProcessorFixed.cpp
Source/Infrastructure/Messaging/: LockFreeMessageQueue.h  MessageDispatcher.h  MessageTypes.h
Source/Infrastructure/Plugins/: PluginManager.cpp  PluginManager.h  PluginSandbox.cpp  PluginSandbox.h  PluginWindowManager.h
Source/Presentation/: CLAUDE.md
Source/Presentation/Components/: ArrowButton.h  IconButton.h  ModernButton.h  ModernSlider.h  TransportControl.cpp  TransportControl.h
Source/Presentation/Core/: AppController.cpp  AppController.h  BaseComponent.h  ComponentBase.cpp  ComponentBase.h  DesignSystem.h  MainWindow.cpp  MainWindow.h  UICoordinator.cpp  UICoordinator.h
Source/Presentation/ViewModels/: ScaleSlotViewModel.cpp  ScaleSlotViewModel.h  StageViewModel.h  TrackViewModel.h  TransportViewModel.h
Source/Presentation/Views/: CustomScaleEditor.cpp  CustomScaleEditor.h  MainEditor.h  MixerView.cpp  MixerView.h  PerformanceMonitorView.cpp  PerformanceMonitorView.h  PluginBrowser.h  PulseScaleSwitcher.cpp  PulseScaleSwitcher.h  ScaleBrowser.cpp  ScaleBrowser.h  ScaleSlotSelector.cpp  ScaleSlotSelector.h  StageCard.h  StageGrid.cpp  StageGrid.h  TrackSidebar.cpp  TrackSidebar.h  TransportBar.h
Source/Tests/: MidiTimingAnalyzer.h
Source/Tools/: PluginScanWorker.cpp
Source/UI/: AdvancedComponents.cpp  AdvancedComponents.h  BasicComponents.cpp  BasicComponents.h  CLAUDE.md  ComponentBase.cpp  ComponentBase.h  ComponentShowcase.cpp  ComponentShowcase.h  LayoutComponents.cpp  LayoutComponents.h  PerformanceComparison.h  PulseComponentLibrary.cpp  PulseComponentLibrary.h
Tests/: AccumulatorEngineTests.cpp  AllTests.cpp  AsyncPatternEngineTests.cpp  CMakeLists.txt  ChannelManagerTests.cpp  DomainModelTests.cpp  GateEngineTests.cpp  MasterClockTests.cpp  MidiEventGeneratorTests.cpp  MidiRouterTests.cpp  PatternSchedulerTests.cpp  PatternTests.cpp  PitchEngineTests.cpp  PluginSandboxTests.cpp  PresetManagerTests.cpp  ScaleTests.cpp  SequencerEngineTests.cpp  StageTests.cpp  SyncManagerTests.cpp  TimingTests.cpp  TrackProcessorTests.cpp  TrackTests.cpp  TransportTests.cpp  VoiceManagerTests.cpp
Tests/Performance/: BenchmarkMain.cpp  CMakeLists.txt  README.md
Tests/Performance/Benchmarks/: AudioProcessorBenchmark.cpp  LockFreeQueueBenchmark.cpp  MasterClockBenchmark.cpp  MidiGenerationBenchmark.cpp  PatternProcessingBenchmark.cpp  VoiceManagerBenchmark.cpp
Tests/Performance/Core/: BenchmarkHelpers.cpp  BenchmarkHelpers.h  PerformanceMetrics.cpp  PerformanceMetrics.h  PerformanceReporter.cpp  PerformanceReporter.h  RegressionDetector.cpp  RegressionDetector.h
Tests/Performance/Scripts/: generate_report.py
Tests/Performance/Tests/: CPUUsageTest.cpp  JitterTest.cpp  LatencyTest.cpp  MemoryUsageTest.cpp  PerformanceIntegrationTest.cpp  TestMain.cpp  ThreadContentionTest.cpp
Tests/Performance/Tools/: RegressionDetectorMain.cpp
Tests/Scripts/: daily_test.sh  test_midi_routing.sh  test_performance.sh  test_timing.sh  test_voice_manager.sh
Tools/PluginSandboxHost/: PluginSandboxHostMain.cpp
Tools/PluginScanner/: PluginHostBridgeMain.cpp  PluginProbeWorkerMain.cpp  PluginScanWorkerMain.cpp
Tools/UIDesigner/: CMakeLists.txt
Tools/UIDesigner/Source/: ComponentGallery.cpp  ComponentGallery.h  Main.cpp  MainWindow.cpp  MainWindow.h
build-test/: CMakeCache.txt
build_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build_release/Tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test_results/midi_routing_test_20250828_035126/: default_plugin_only_midi_capture.txt
(+4 files in other folders)
